how to setup environment virable.