@@ -38,4 +38,51 @@ docker run --name nginx -e USERNAME=QIJUNBO -d -p 8888:80 envtest
 
 > Hello，QIJUNBO
 
+$JAVA_OPTS
+==
 
+- 首先在 Dockerfile 里面设置这个环境变量
+
+格式可以参考[官方文档](https://docs.docker.com/engine/reference/builder/#env)
+```
+ENV JAVA_OPTS="-server -Xms256m -Xmx512m -XX:MaxPermSize=256m -Duser.timezone=Asia/Shanghai -Dmdm.cloud=/mdm8 -Dmdm.cv=false -Dmdm.home=/home/mdm8"
+
+```
+
+- 让这个变量生效， 可以在命令行里面嵌入, 可以在 Dockerfile 里面， 也是看在docker-entrypoint.sh 里面， 但要注意语法正确
+
+```
+CMD  java $JAVA_OPTS  -jar  youapp.jar
+
+
+java  $JAVA_OPTS  -jar  youapp.jar
+
+```
+
+- 启动容器时的语法
+
+```
+docker run --name mysql -e MYSQL_ROOT_PASSWORD=sunway123# -d -p 3306:3306   mysql
+
+```
+
+- docker-compose.yml 里面的语法
+
+```yml
+version: '3.4'
+networks:
+  webnet:
+    driver: bridge
+services:
+    swhome:
+        image: registry.cn-hangzhou.aliyuncs.com/inmost/develop:1.1-cl
+        restart: always
+        environment:
+            JAVA_OPTS: -server -Xms128m -Xmx512m -XX:MaxPermSize=256m -Duser.timezone=Asia/Shanghai -Dmdm.cloud=/mdm8 -Dmdm.cv=false -Dmdm.home=/home/mdm8
+            APP_DB_HOST: 172.31.221.150
+            APP_DB_PORT: 3336
+            APP_DATABASE: mdmdev
+            APP_DB_USER: mdmdev
+            APP_DB_PASSWORD: mdmdev
+
+```
